--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.9",
     "@types/lodash": "^4.17.7",
+    "@types/react-slick": "^0.23.13",
     "axios": "^1.7.3",
     "classnames": "^2.5.1",
     "framer-motion": "^11.3.21",
@@ -27,7 +28,9 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.2",
     "react-router-dom": "^6.26.0",
+    "react-slick": "^0.30.2",
     "rollup-plugin-visualizer": "^5.12.0",
+    "slick-carousel": "^1.8.1",
     "tw-elements": "^2.0.0"
   },
   "devDependencies": {
