--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@floating-ui/react-dom-interactions": "^0.13.3",
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.9",
+    "@types/dompurify": "^3.0.5",
     "@types/lodash": "^4.17.7",
     "@types/react-slick": "^0.23.13",
     "axios": "^1.7.3",
     "classnames": "^2.5.1",
+    "dompurify": "^3.1.6",
     "framer-motion": "^11.3.21",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
